# ergodox-display

./: CHANGELOG.md  README.md  layout.json  zsa_ergodox_ez_m32u4_base_yX3pz_XbQYA4_current-layout.hex
.github/: dependabot.yml
.github/workflows/: build.yml
assets/udev/: 50-zsa.rules
docs/adr/: 0001-tauri-with-oryx-raw-hid-capture.md  0002-os-keyboard-layout-label-translation.md  0003-runtime-layout-import.md
scripts/: gen_geometry.py  gen_icons.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hid.rs  layoutstore.rs  main.rs  oskeymap.rs  settings.rs
ui/: geometry.json  index.html  main.js  settings.html  style.css
