[package]
name = "ergodox-display"
version = "0.1.0"
description = "Transparent overlay displaying Ergodox EZ layouts and live keypresses"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"

[profile.release]
lto = true
strip = true
