[package]
name = "ergodox-display"
version = "0.1.0"
description = "Transparent overlay displaying Ergodox EZ layouts and live keypresses"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
ureq = "2"

[target.'cfg(target_os = "linux")'.dependencies]
xkbcommon = { version = "0.8", features = ["x11"] }
xcb = { version = "1", features = ["as-raw-xcb-connection"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
strip = true
